--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-name = "server"
+name = "my-project"
 version = "0.1.0"
+authors = ["runner"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
